--- a/src/app/finding/edit/finding.edit.dialog.html
+++ b/src/app/finding/edit/finding.edit.dialog.html
@@ -1,10 +1,15 @@
-<div class="finding-create-dialog">
+<div class="finding-edit-dialog">
   <h2 mat-dialog-title>
     <mat-icon aria-label="Create">create</mat-icon>
-    <span>{{ 'Finding Registration' | translate }}</span>
+    <span>{{ 'Finding Edit' | translate }}</span>
   </h2>
   <div mat-dialog-content>
     <div class="row">
+      <div class="col">
+        <mat-form-field class="full-width">
+          <input matInput placeholder="{{ 'Finding Id' | translate }}" [(ngModel)]="findingId"  disabled />
+        </mat-form-field>
+      </div>
       <div class="col">
         <mat-form-field class="full-width">
           <input matInput placeholder="{{'Finding Supervisor ID' | translate}}" [(ngModel)]="supervisor" />
@@ -33,6 +38,8 @@
           </button>
         </mat-menu>
       </div>
+    </div>
+    <div class="row">
       <div class="col">
         <mat-form-field class="full-width">
           <input matInput [matDatepicker]="endDatePicker" placeholder="{{ 'End Date' | translate }}" [formControl]="endDate" required>
@@ -40,8 +47,6 @@
           <mat-datepicker #endDatePicker></mat-datepicker>
         </mat-form-field>
       </div>
-    </div>
-    <div class="row">
       <div class="col">
         <mat-form-field class="full-width">
           <input matInput [matDatepicker]="modifiedEndDatePicker" placeholder="{{ 'Modified End Date' | translate }}" [formControl]="modifiedEndDate">
@@ -67,7 +72,6 @@
           </mat-select>
         </mat-form-field>
       </div>
-      <div class="col"></div>
     </div>
     <div class="row">
       <div class="col">
@@ -94,6 +98,6 @@
   <div mat-dialog-actions>
     <button mat-raised-button (click)="clear()">{{ 'Clear' | translate }}</button>
     <button mat-raised-button (click)="close()">{{ 'Close' | translate }}</button>
-    <button mat-raised-button color="primary" (click)="create()" cdkFocusInitial>{{ 'Create' | translate }}</button>
+    <button mat-raised-button color="primary" (click)="update()" cdkFocusInitial>{{ 'Save' | translate }}</button>
   </div>
 </div>
