--- a/src/app/finding/list/finding.list.component.scss
+++ b/src/app/finding/list/finding.list.component.scss
@@ -176,6 +176,18 @@
     }
   }
 
+  .related-action-plans {
+    margin-top: 16px;
+
+    .folder-icon {
+      vertical-align: text-bottom;
+      margin-right: 8px;
+    }
+
+    .search-placeholder {
+      font-size: 16px;
+    }
+  }
 }
 
 
@@ -189,5 +201,3 @@
     justify-content: flex-end;
   }
 }
-
-
